# LogAlert

./: LICENSE  README.md  pyproject.toml
src/: main.py
